// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VParallax.js should render 1`] = `

<div class="v-parallax"
     style="height: 500px;"
>
  <div class="v-parallax__image-container">
    <img class="v-parallax__image"
         style="display: block; opacity: 0;"
    >
  </div>
  <div class="v-parallax__content">
  </div>
</div>

`;

exports[`VParallax.js should use alt tag when supplied 1`] = `

<div class="v-parallax"
     style="height: 500px;"
>
  <div class="v-parallax__image-container">
    <img alt="name"
         class="v-parallax__image"
         style="display: block; opacity: 0;"
    >
  </div>
  <div class="v-parallax__content">
  </div>
</div>

`;
